--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # ignore vs-code settings
-.vscode/
+/.vscode/*
+!.vscode/settings.json.example
+!.vscode/eth-quantum-mechanics.code-workspace
 
 # ignore the latex build
 build/
